--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "62e5662c-2d52-45dd-b1b8-fd040af96283"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
